--- a/demo-service/src/main/resources/demo_service.properties
+++ b/demo-service/src/main/resources/demo_service.properties
@@ -10,14 +10,16 @@ demo.ds.maxWait=60000
 ###dubbo###
 dubbo.application.name=demo-service-provider
 ###dev###
-dubbo.registry.address=zookeeper://192.168.125.71:2182
-#dubbo.registry.address-es=zookeeper://14.18.242.235:2182
+dubbo.registry.address=zookeeper://192.168.xx.xx:2182
 ###test###
-#dubbo.registry.address=zookeeper://14.18.242.235:2182
+#dubbo.registry.address=zookeeper://14.18.xx.xx:2182
 dubbo.registry.timeout=20000
 dubbo.protocol.port=8084
 dubbo.service.protocol=dubbo
+###服务分组###
 dubbo.service.group=demo_group
+###超时时间###
 dubbo.service.timeout=60000
+###重试次数###
 dubbo.service.retries=5
 
